--- a/index.html
+++ b/index.html
@@ -50,11 +50,20 @@
                         </svg>
                     </div>
                     <div id="title">
-
+                        <h3>Hi there,</h3>
+                        <h1>Kye Rogers</h1>
                     </div>
                 </div>
                 <div id="box-2-item-2">
-                    
+                    <div>
+                        <button class="btn-1">New</button>
+                    </div>
+                    <div>
+                        <button class="btn-1">Upload</button>
+                    </div>
+                    <div>
+                        <button class="btn-1">Share</button>
+                    </div>
                 </div>
             </div>
         </div>
