--- a/index.html
+++ b/index.html
@@ -8,7 +8,49 @@
 </head>
 <body>
     <div class="page">
-        <div class="sidebar"></div>
+        <div class="sidebar">
+            <div class="dashboard-title">
+                <div class="svg"></div>
+                <div class="title"></div>
+            </div>
+            <div class="sub-title">
+                <div class="svg"></div>
+                <div class="title"></div>
+            </div>
+            <div class="sub-title">
+                <div class="svg"></div>
+                <div class="title"></div>
+            </div>
+            <div class="sub-title">
+                <div class="svg"></div>
+                <div class="title"></div>
+            </div>
+            <div class="sub-title">
+                <div class="svg"></div>
+                <div class="title"></div>
+            </div>
+            <div class="sub-title">
+                <div class="svg"></div>
+                <div class="title"></div>
+            </div>
+            <div class="sub-title">
+                <div class="svg"></div>
+                <div class="title"></div>
+            </div>
+            <div class="spacer"></div>
+            <div class="sub-title">
+                <div class="svg"></div>
+                <div class="title"></div>
+            </div>
+            <div class="sub-title">
+                <div class="svg"></div>
+                <div class="title"></div>
+            </div>
+            <div class="sub-title">
+                <div class="svg"></div>
+                <div class="title"></div>
+            </div>
+        </div>
         <div class="header">
             <div id="header-box-1">
                 <div id="box-1-item-1">
